Makefile: add cflags

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,14 +1,17 @@
 CC=g++
-LINK=-lncurses
-steve: main.o game.o entity.o screen.o
-	$(CC) -o steve main.o game.o entity.o screen.o $(LINK)
+CFLAGS=
+LINK=-lncursesw
+steve: main.o game.o player.o entity.o screen.o
+	$(CC) $(CFLAGS) -o steve main.o game.o player.o entity.o screen.o $(LINK)
 main.o: main.cpp game.h screen.h
-	$(CC) -c main.cpp 
+	$(CC) $(CFLAGS) -c main.cpp 
 game.o: game.cpp game.h screen.h
-	$(CC) -c game.cpp 
+	$(CC) $(CFLAGS) -c game.cpp 
+player.o: player.cpp player.h entity.h screen.h
+	$(CC) $(CFLAGS) -c player.cpp
 entity.o: entity.cpp entity.h screen.h
-	$(CC) -c entity.cpp 
+	$(CC) $(CFLAGS) -c entity.cpp 
 screen.o: screen.cpp screen.h
-	$(CC) -c screen.cpp 
+	$(CC) $(CFLAGS) -c screen.cpp 
 clean:
 	rm *.o steve
