Implement physics for jumping

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,13 +1,13 @@
 CC=g++
 CFLAGS=
-LINK=-lncurses
+LINK=-lncurses -lm
 steve: main.o game.o player.o entity.o screen.o
 	$(CC) $(CFLAGS) -o steve main.o game.o player.o entity.o screen.o $(LINK)
 main.o: main.cpp game.h screen.h
 	$(CC) $(CFLAGS) -c main.cpp 
 game.o: game.cpp game.h screen.h
 	$(CC) $(CFLAGS) -c game.cpp 
-player.o: player.cpp player.h entity.h screen.h
+player.o: player.cpp player.h entity.h screen.h game.h
 	$(CC) $(CFLAGS) -c player.cpp
 entity.o: entity.cpp entity.h screen.h
 	$(CC) $(CFLAGS) -c entity.cpp 
